--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -3,8 +3,38 @@
 
 {% block body %}
     <div class="jumbotron text-center">
-        <h1>Agence Loren Ipsum</h1>
+        <div class="container">
+            {{ form_start(form) }}
+            <div class="form-row align-items-end">
+                <div class="col-md-5">
+                    {{ form_row(form.minSurcace) }}
+                </div>
+                <div class="col-md-5">
+                    {{ form_row(form.maxPrice) }}
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <button class="btn btn-primary btn-block">Rechercher</button>
+                    </div>
+                </div>
+            </div>
+            {{ form_end(form) }}
+        </div>
+        <h1>Voir tous nos biens</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis eligendi itaque labore laboriosam laborum maiores minima nesciunt repellat unde voluptatum. Asperiores, excepturi incidunt magni maxime molestiae omnis quod reprehenderit velit?</p>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            {% for property in properties %}
+                <div class="col-md-4">
+                    {% include 'property/_property.html.twig' %}
+                </div>
+            {% endfor %}
+        </div>
+        <div class="pagination">
+            {{ knp_pagination_render(properties) }}
+        </div>
     </div>
 
 {% endblock %}
