Gestion des options, modiffication du mappingby et inverseby entre property et option, ajout de la feat gestion des option sur le dashbord admin et dans le search engine

--- a/templates/admin/property/_form.html.twig
+++ b/templates/admin/property/_form.html.twig
@@ -16,6 +16,10 @@
     <div class="col-md-4">{{ form_row(form.postal_code) }}</div>
     <div class="col-md-2 mt-5">{{ form_row(form.sold) }}</div>
 </div>
-{{ form_widget(form) }}
+<div class="row">
+    <div class="col-md-5">{{ form_row(form.options) }}</div>
+    <div class="col-md-7">{{ form_row(form.description) }}</div>
+</div>
+{{ form_rest(form) }}
 <button class="btn btn-primary mb-5"> {{ button|default('Enregistrer') }}</button>
 {{ form_end(form) }}
