--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -6,11 +6,14 @@
         <div class="container">
             {{ form_start(form) }}
             <div class="form-row align-items-end">
-                <div class="col-md-5">
+                <div class="col-md-4">
                     {{ form_row(form.minSurcace) }}
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-3">
                     {{ form_row(form.maxPrice) }}
+                </div>
+                <div class="col-md-3">
+                    {{ form_row(form.options) }}
                 </div>
                 <div class="col-md-2">
                     <div class="form-group">
